[tool.poetry]
name = "slack-llm"
version = "0.1.0"
description = "An LLM-powered Slackbot"
authors = ["Andrew Epstein"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
slack-sdk = "^3.27.1"
ollama = "^0.1.9"
tiktoken = "^0.6.0"
requests = "^2.31.0"
torch = "^2.3.0"
diffusers = "^0.27.2"
accelerate = "^0.30.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.1.2"
pytest-mock = "^3.14.0"
ruff = "^0.4.2"
types-requests = "^2.31.0.20240406"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false

warn_return_any = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

strict = true
pretty = true

[tool.black]
line_length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["G004", "D102", "ANN101", "D100", "D103", "T201", "E501", "PTH123", "D101", "ANN204", "D107", "D203", "D213", "TRY300"]
fixable = ["ALL"]